layout bug fix.

--- a/sass/pages/_legislator.scss
+++ b/sass/pages/_legislator.scss
@@ -34,6 +34,7 @@
 				width: 24px;
 				height: 24px;
 				margin-top: -4px;
+				margin-right: 5px;
 				vertical-align: middle;
 			}
 			.facebook {
